# QuickPed-API

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 06b27f92c5a4_add_ocultar_column_to_the_model_pedido.py  098bb0b53b75_add_nome_to_mesa.py  20250420_add_min_selecoes_grupo_adicional.py  75d96829e15d_initial_migration.py  7c96fd3fae57_add_cliente__endereco__tipo_pedido.py  9162a9a0283a_add_imprime_column_to_categoria_produto_.py  a54580fdb9dd_add_master_column.py  b90dd71a68dd_add_column_imprime_to_comanda.py  c50bbc483fae_add_imprime_column_to_produto_model.py  d626802dffa8_initial.py
app/: main.py
app/api/v1/: adicional.py  autenticacao.py  categoria_produto.py  comanda.py  estabelecimento.py  grupo_adicional.py  mesa.py  pedido.py  produto.py
app/auth/: dependencies.py  hash.py  jwt.py  router.py
app/auth/admin/: dependencies.py  router.py
app/auth/public/: dependencies.py  (+1 more)
app/core/: config.py
app/database/: engine.py
app/models/: categoria_produto.py  cliente.py  comanda.py  estabelecimento.py  mesa.py  parametros.py  pedido.py  permissoes.py  produto.py  usuario.py
app/schemas/: autenticacao.py  cardapio.py  categoria_produto.py  cliente.py  comanda.py  endereco.py  estabelecimento.py  mesa.py  pedido.py  produto.py
app/services/: autenticacao.py  base.py  cardapio.py  categoria_produto.py  cliente.py  comanda.py  correios_client.py  estabelecimento.py  image_upload.py  impressao.py  mesa.py  pedido.py  produto.py
client_impressao/: .env.example  main.py
docker/: docker-compose.dev.yml
(+14 files in other folders)
