[project]
name = "quickped-api"
version = "0.1.0"
description = "An API for QuickPed, an order management system for restaurants."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "passlib[argon2,bcrypt,bycript]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.37",
    "unidecode>=1.4.0",
    "slowapi>=0.1.9",
    "alembic>=1.15.0",
    "tzdata>=2026.1",
    "tenacity>=9.1.4",
    "boto3>=1.43.9",
]
